@@ -165,8 +165,6 @@ lib/SPVM/Sys/Socket/Sockaddr/In6.c
 lib/SPVM/Sys/Socket/Sockaddr/In6.config
 lib/SPVM/Sys/Socket/Sockaddr/In6.pm
 lib/SPVM/Sys/Socket/Sockaddr/In6.spvm
-lib/SPVM/Sys/Socket/Sockaddr/Interface.pm
-lib/SPVM/Sys/Socket/Sockaddr/Interface.spvm
 lib/SPVM/Sys/Socket/Sockaddr/Storage.c
 lib/SPVM/Sys/Socket/Sockaddr/Storage.config
 lib/SPVM/Sys/Socket/Sockaddr/Storage.pm
